--- a/elastic-docker-tls.yml
+++ b/elastic-docker-tls.yml
@@ -50,7 +50,7 @@ services:
       ELASTICSEARCH_URL: https://es01:9200
       ELASTICSEARCH_HOSTS: https://es01:9200
       ELASTICSEARCH_USERNAME: kibana_system
-      ELASTICSEARCH_PASSWORD: FbpxXmzZAFIKLEgLPKQA
+      ELASTICSEARCH_PASSWORD: changeme
       ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES: $CERTS_DIR/ca/ca.crt
       SERVER_SSL_ENABLED: "true"
       SERVER_SSL_KEY: $CERTS_DIR/kib01/kib01.key
